1.16
____
- Use token expiration to auto renew the token
- Add 'from_family_id' class method to Family
- Made IntezerAPI private module
- Rename IntezerProxy to IntezerApiClient

1.15.2
-------
- Fix JSON deserialization of endpoint scan results

1.15.1
-------
- Add 'is_analysis_running' method to Analysis class.
- Add 'running_analysis_duration' method to Analysis class.
- Add 'authenticate' method to IntezerProxy class

1.15.0
-------
- Support for offline endpoint scan uploading in 'EndpointAnalysis'.

1.14.4
-------
- Add analysis time to analysis object

1.14.3
-------
- Add check status for operation

1.14.2
-------
- Fix analyze-by-hash with command line args


1.14.1
-------
- Fix: analyze url route

1.14
-------
- Add enums for the basic consts: SoftwareType, FileAnalysisVerdict, URLAnalysisVerdict, EndpointAnalysisVerdict.
- Support getting analyses history (url\file\endpoint) from server.
- New On-premise version support.
- Python 3.11 Support.

1.13
-------
- Add detection report
- Add sandbox command line arguments option for analyses

1.12
-------
- Add file analysis by download url

1.11.3
-------
- Get EDR alert assessments by edr alert ids

1.11.2
-------
- Add action taken emoji

1.11.1
-------
- Add option to add suffix to user agent

1.11
-------
- Add indicators to SubAnalysis

1.10
-------
- Add endpoint analysis
- Support getting analysis by analysis id while in progress

1.9.2
-------
- Allow passing file-like object to download file
- When providing to download file a directory, the file name is taken from the response

1.9.1
-------
- Optional latest family search on get analysis metadata

1.9.0
-------
- Rename exception to have Error suffix
- Add `SubAnalysis.from_analysis_id` to properly initialize SubAnalysis without the composed analysis
- Fix URL analysis additional parameters propagation
- Add File analysis summary metadata function

1.8.3
-------
- add extraction info to sub analysis

1.8.1
-------
- Add space in note title

1.8.0